--- a/backstage-app/Dockerfile.production
+++ b/backstage-app/Dockerfile.production
@@ -100,14 +100,15 @@ COPY --from=build --chown=node:node /app/packages/backend/dist/bundle/ ./
 
 # Copy any other files that we need at runtime
 COPY --chown=node:node app-config*.yaml ./
+COPY --chown=node:node app-config.production*.yaml ./
 
 # This will include the examples, if you don't need these simply remove this line
 COPY --chown=node:node examples ./examples
 
 # This switches many Node.js dependencies to production mode.
-ENV NODE_ENV=development
+ENV NODE_ENV=production
 
 # This disables node snapshot for Node 20 to work with the Scaffolder
 ENV NODE_OPTIONS="--no-node-snapshot"
 
-CMD ["node", "packages/backend", "--config", "app-config.yaml"]
+CMD ["node", "packages/backend", "--config", "app-config.production.yaml"]
