--- a/backstage-app/Dockerfile.production
+++ b/backstage-app/Dockerfile.production
@@ -99,7 +99,7 @@ RUN --mount=type=cache,target=/home/node/.cache/yarn,sharing=locked,uid=1000,gid
 COPY --from=build --chown=node:node /app/packages/backend/dist/bundle/ ./
 
 # Copy any other files that we need at runtime
-COPY --chown=node:node app-config*.yaml ./
+# COPY --chown=node:node app-config*.yaml ./
 COPY --chown=node:node app-config.production*.yaml ./
 
 # This will include the examples, if you don't need these simply remove this line
